[package]
name = "picarto_vod_downloader"
version = "0.8.0"
authors = ["Siv <mcsibsart@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
clap = "3.0.0-beta.5"
reqwest = { version = "0.11.6", features = ["blocking"] }
scraper = "0.12.0"
m3u8-rs = "2.1.0"
url = "2.2.2"
rayon = "1.5.1"
mktemp = "0.4.1"
indicatif = "0.17.0-beta.1"
walkdir = "2.3.2"
rand = "0.8.4"
simplelog = "0.10.2"
log = "0.4.14"
